# teseus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
teseus/: __main__.py  app.py  resources.py
teseus/model/: __init__.py
teseus/model/authentication/: __init__.py
teseus/templates/: login.html  status.html
