[tool.poetry]
name = "teseus"
version = "0.1.0"
description = "Test Server for us"
authors = ["aYukiYoshida <yuki.yoshida@access-company.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
pyjwt = "^2.6.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
teseus = "teseus.__main__:main"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"
pylint = "^2.17.2"
taskipy = "^1.10.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
